Implemented banner, navbar, and announcement bar.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Firebelly Tea | Premium Loose Leaf Tea & Steepware</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <div class="container">
+                <div class="logo">
+                    <img src="https://www.firebellytea.com/cdn/shop/files/FIREBELLY-TEA-LOGO-K_130x.png?v=1709321965"
+                        alt="">
+                </div>
+
+            <div class="row v-center">
+                <!-- left side menu -->
+                <i class="fas fa-bars" id="hamburger-icon"></i>
+
+
+                <div class="sidebar" id="sidebar"> 
+                    <nav>
+                        <ul>
+                            <li><a href="#">SHOP</a></li>
+                            <li><a href="#">LEARN</a></li>
+                            <li><a href="#">SUBSCRIPTIONS</a></li>
+                            <li><a href="#">CORPORATE GIFTING</a></li>
+                        </ul>
+                    </nav>
+                    <button id="close-sidebar">&times;</button>
+                </div>
+
+                <div class="header-item item-left">
+                    <nav class="menu">
+                        <ul class="menu-main">
+                            <li>
+                                <a href="#">SHOP<i class="fas fa-angle-down"></i></a>
+                            </li>
+                            <li>
+                                <a href="#">LEARN<i class="fas fa-angle-down"></i></a>
+                            </li>
+                            <li>
+                                <a href="#">SUBSCRIPTIONS</a>
+                            </li>
+                            <li>
+                                <a href="#">CORPORATE GIFTING</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <!-- right menu -->
+                <div class="header-item item-right">
+                    <nav class="menu">
+                        <ul class="menu-main">
+                            <li>US<i class="fas fa-angle-down"></i></li>
+                            <li>SEARCH</li>
+                            <li>ACCT</li>
+                            <div class="svg-container">
+                                <svg class="icon icon-cart-empty" aria-hidden="true" focusable="false"
+                                    role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"
+                                    fill="none">
+                                    <path
+                                        d="m15.75 11.8h-3.16l-.77 11.6a5 5 0 0 0 4.99 5.34h7.38a5 5 0 0 0 4.99-5.33l-.78-11.61zm0 1h-2.22l-.71 10.67a4 4 0 0 0 3.99 4.27h7.38a4 4 0 0 0 4-4.27l-.72-10.67h-2.22v.63a4.75 4.75 0 1 1 -9.5 0zm8.5 0h-7.5v.63a3.75 3.75 0 1 0 7.5 0z"
+                                        fill="currentColor" fill-rule="evenodd"></path>
+                                </svg>
+                            </div>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <div class="announcement-bar">
+        <ul>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+        </ul>
+    </div>
+
+    <section class="banner-section">
+        <div class="picture-container">
+            <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/Spring_2024_v8.jpg?v=1712090233&width=1800"
+                alt="" class="banner-img">
+        </div>
+
+        <div class="title-container">
+            <div class="title-text">
+                <p>Experience the best tea products on the planet</p>
+            </div>
+
+            <a href="#" class="button">EXPLORE BEST SELLERS</a>
+        </div>
+    </section>
+
+
 </body>
+<script src="index.js"></script>
 </html>
