implemented sliding images and discount section

--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- <i class="fa-solid fa-star"></i> -->
 </head>
 
 <body>
 
     <header class="header">
         <div class="container">
-                <div class="logo">
-                    <img src="https://www.firebellytea.com/cdn/shop/files/FIREBELLY-TEA-LOGO-K_130x.png?v=1709321965"
-                        alt="">
-                </div>
+            <div class="logo">
+                <img src="https://www.firebellytea.com/cdn/shop/files/FIREBELLY-TEA-LOGO-K_130x.png?v=1709321965"
+                    alt="">
+            </div>
 
             <div class="row v-center">
                 <!-- left side menu -->
                 <i class="fas fa-bars" id="hamburger-icon"></i>
 
 
-                <div class="sidebar" id="sidebar"> 
+                <div class="sidebar" id="sidebar">
                     <nav>
                         <ul>
                             <li><a href="#">SHOP</a></li>
@@ -99,6 +103,20 @@
             <li>FREE SHIPPING Over $59</li>
             <li>Save $10 for Mother's Day — shop now</li>
         </ul>
+        <ul>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+            <li>FREE SHIPPING Over $59</li>
+            <li>Save $10 for Mother's Day — shop now</li>
+        </ul>
+
     </div>
 
     <section class="banner-section">
@@ -117,6 +135,71 @@
     </section>
 
 
+    <main class="main">
+        <div class="data-ird">
+            <div class="as-seen">
+                <span>AS SEEN IN</span>
+            </div>
+            <div class="image-names"> 
+                <div class="data-ird-img-container">
+                    <img src="https://andytown-public.s3.us-west-1.amazonaws.com/templates/component-templates/bite%20hp/51_2c29de6e-61fe-41d0-bf7d-e652ee42ac64.webp%3Fv%3D1706775445"
+                        alt="shubham">
+                </div>
+
+                <div class="data-ird-img-container">
+                    <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/Wired_13d9ed27-f6d6-44dd-8192-7cc0e084b39f.png?v=1709931409&width=2048"
+                        alt="">
+                </div>
+
+                <div class="data-ird-img-container">
+                    <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/goodhousekeeping_86a0f8e7-f854-47f2-8e5b-f8b0e0d7e5f4.png?v=1709931564&width=2048"
+                        alt="">
+                </div>
+                <div class="data-ird-img-container">
+                    <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/new-york-magazine-logo_02507b8d-f691-4c00-93f1-fc02170fe941.png?v=1709931466&width=2048"
+                        alt="">
+                </div>
+
+                <div class="data-ird-img-container">
+                    <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/food-and-wine-logo_7211fae3-f40f-40d2-a300-20b7155cedb0.png?v=1710177589&width=2048"
+                        alt="">
+                </div>
+
+                <div class="data-ird-img-container">
+                    <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/bestproducts.png?v=1709931536&width=2048"
+                        alt="">
+                </div>
+
+                <div class="data-ird-img-container">
+                    <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/Dwell_20f644aa-3735-487a-9274-3bf3747255db.png?v=1710779817&width=2048"
+                        alt="">
+                </div>
+
+                <div class="data-ird-img-container">
+                    <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/domino-logo-vector.png?v=1709931439&width=2048"
+                        alt="">
+                </div>
+            </div>
+        </div>
+
+        <hr class="horizontal-line">
+
+        <div class="disconunt-container">
+            <div class="left-div">
+                <h1>Perfect for Mom, $10 Off.</h1>
+                <p>Turns out you can make her day while making it easy on yourself. Save $10 on the Total Package Gift Set, only until May 12.</p>
+                <p>Ready to give in a premium gold-embossed gift box.</p>
+                <a href="" class="visit-button">VISIT THE GIFT SHOP</a>
+            </div>
+            <div class="right-div">
+                <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/TotalPackage_icon_df778c1d-1c81-4bc7-96de-b12cef50efb5.jpg?v=1713380932&width=2048"
+                    alt="">
+            </div>
+        </div>
+    </main>
+
+
 </body>
 <script src="index.js"></script>
+
 </html>
