top seller section done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <!-- <i class="fa-solid fa-star"></i> -->
+    <!-- <i class="fa-solid fa-star"></i> -->
 </head>
 
 <body>
@@ -37,8 +37,8 @@
                 <div class="sidebar" id="sidebar">
                     <nav>
                         <ul>
-                            <li><a href="#">SHOP</a></li>
-                            <li><a href="#">LEARN</a></li>
+                            <li><a href="#">SHOP ></a></li>
+                            <li><a href="#">LEARN ></a></li>
                             <li><a href="#">SUBSCRIPTIONS</a></li>
                             <li><a href="#">CORPORATE GIFTING</a></li>
                         </ul>
@@ -91,30 +91,30 @@
 
     <div class="announcement-bar">
         <ul>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
         </ul>
         <ul>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
             <li>FREE SHIPPING Over $59</li>
-            <li>Save $10 for Mother's Day — shop now</li>
+            <li>Save $10 for Mother's Day - shop now</li>
         </ul>
 
     </div>
@@ -135,12 +135,12 @@
     </section>
 
 
-    <main class="main">
+    <section class="main">
         <div class="data-ird">
             <div class="as-seen">
                 <span>AS SEEN IN</span>
             </div>
-            <div class="image-names"> 
+            <div class="image-names">
                 <div class="data-ird-img-container">
                     <img src="https://andytown-public.s3.us-west-1.amazonaws.com/templates/component-templates/bite%20hp/51_2c29de6e-61fe-41d0-bf7d-e652ee42ac64.webp%3Fv%3D1706775445"
                         alt="shubham">
@@ -187,7 +187,8 @@
         <div class="disconunt-container">
             <div class="left-div">
                 <h1>Perfect for Mom, $10 Off.</h1>
-                <p>Turns out you can make her day while making it easy on yourself. Save $10 on the Total Package Gift Set, only until May 12.</p>
+                <p>Turns out you can make her day while making it easy on yourself. Save $10 on the Total Package Gift
+                    Set, only until May 12.</p>
                 <p>Ready to give in a premium gold-embossed gift box.</p>
                 <a href="" class="visit-button">VISIT THE GIFT SHOP</a>
             </div>
@@ -196,9 +197,188 @@
                     alt="">
             </div>
         </div>
-    </main>
+    </section>
 
+    <!-- top seller section -->
 
+    <section class="top-seller">
+        <h1>Meet the Top Sellers</h1>
+        <p>Shop All ></p>
+
+        <div class="cart-container" id="cart-container">
+            <!-- cart-1 -->
+            <div class="cart">
+                <div class="title-div">
+                    <p>STOP-INFUSION TRAVEL MUG</p>
+                </div>
+                <div class="product-img">
+                    <img src="https://www.firebellytea.com/cdn/shop/files/stop-infusion-travel-mug-621245.jpg?v=1713186305&width=2048"
+                        alt="">
+                </div>
+
+                <div class="description">
+                    <div class="review">
+                        <div class="review-div">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <span>94 Reviews</span>
+                        </div>
+                        <div class="review-div">
+                            <p>Steep perfect hot or iced tea on-the-go, no mess. 100% leakproof and made with non-toxic
+                                materials.</p>
+                        </div>
+                    </div>
+
+                    <div class="cup-container">
+                        <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/cup.png?v=1711131762&width=2048"
+                            alt="">
+                        <p>16oz / 470ml</p>
+                    </div>
+                    <div>
+                        <select>
+                            <option value="NOIR">NOIR</option>
+                            <option value="BLANC">BLANC</option>
+                            <option value="FORET">FORET</option>
+                            <option value="MER">MER</option>
+                            <option value="SAUMON">SAUMON</option>
+                            <option value="FEU">FEU</option>
+                        </select>
+                    </div>
+                    <div>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+            <!-- cart-2 -->
+            <div class="cart">
+                <div class="title-div">
+                    <p>THE CROWD PLEASER</p>
+                </div>
+                <div class="product-img">
+                    <img src="https://www.firebellytea.com/cdn/shop/products/the-crowd-pleaser-456638.jpg?v=1709003470&width=2048"
+                        alt="">
+                </div>
+                <div class="description">
+                    <div class="review">
+                        <div class="review-div">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half"></i>
+                            <span>100 Reviews</span>
+                        </div>
+                        <div class="review-div">
+                            <p>Real vanilla pod and almond blended with a smooth black tea. Lightly sweet and always a
+                                hit.</p>
+                        </div>
+                    </div>
+                    <div class="cup-container">
+                        <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/cup.png?v=1711131762&width=2048"
+                            alt="">
+                        <p> 20-25</p>
+                    </div>
+                    <div>
+                        <select>
+                            <option value="DISPLAY BOX">DISPLAY BOX</option>
+                            <option value="BLANC">REFILL BAG</option>
+                        </select>
+                    </div>
+                    <div>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+            <!-- cart-3 -->
+            <div class="cart">
+                <div class="title-div">
+                    <p>TEA STRAINER</p>
+                </div>
+                <div class="product-img">
+                    <img src="https://www.firebellytea.com/cdn/shop/products/Strainer_Black2_1.jpg?v=1677079832&width=2048"
+                        alt="">
+                </div>
+
+                <div class="description">
+                    <div class="review">
+                        <div class="review-div">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half"></i>
+                            <span>57 Reviews</span>
+                        </div>
+                        <div class="review-div">
+                            <p>Allows full expansion for the best flavor. Comes with resting cup to catch drips and puddles.
+                            </p>
+                        </div>
+                    </div> 
+
+                    <div class="cup-container">
+                        <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/cup.png?v=1711131762&width=2048"
+                            alt="">
+                        <p>UNIVERSAL FIT</p>
+                    </div>
+                    <div>
+                        <select>
+                            <option value="NOIR">NOIR</option>
+                            <option value="BLANC">REFILL BAG</option>
+                        </select>
+                    </div>
+                    <div>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+            <!-- cart-4 -->
+            <div class="cart">
+                <div class="title-div">
+                    <p>MAKES GOOD SENCHA</p>
+                </div>
+                <div class="product-img">
+                    <img src="https://www.firebellytea.com/cdn/shop/files/MakesGoodSencha-1-icons-NEW.jpg?v=1708960811&width=2048"
+                        alt="">
+                </div>
+
+                <div class="description">
+                    <div class="review">
+                        <div class="review-div">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half"></i>
+                            <span>101 Reviews</span>
+                        </div>
+                        <div class="review-div">
+                            <p>A fan-favorite blend of buttery sencha and bright gyokuro green teas. It's a must-try with
+                                major
+                                benefits.</p>
+                        </div>
+                    </div>
+
+                    <div class="cup-container">
+                        <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/cup.png?v=1711131762&width=2048"
+                            alt="">
+                        <p>20-25</p>
+                    </div>
+                    <div>
+                        <select>
+                            <option value="DISPLAY BOX">DISPLAY BOX</option>
+                            <option value="BLANC">REFILL BAG</option>
+                        </select>
+                    </div>
+                    <div>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="index.js"></script>
 
