picture and unmatched section implemented.

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
         </div>
     </section>
 
+
     <!-- top seller section -->
 
     <section class="top-seller">
@@ -313,10 +314,10 @@
                             <span>57 Reviews</span>
                         </div>
                         <div class="review-div">
-                            <p>Allows full expansion for the best flavor. Comes with resting cup to catch drips and puddles.
-                            </p>
+                            <p>Allows full expansion for the best flavor. Comes with resting cup to catch drips and
+                                puddles.</p>
                         </div>
-                    </div> 
+                    </div>
 
                     <div class="cup-container">
                         <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/cup.png?v=1711131762&width=2048"
@@ -355,9 +356,8 @@
                             <span>101 Reviews</span>
                         </div>
                         <div class="review-div">
-                            <p>A fan-favorite blend of buttery sencha and bright gyokuro green teas. It's a must-try with
-                                major
-                                benefits.</p>
+                            <p>A fan-favorite blend of buttery sencha and bright gyokuro green teas. It's a must-try
+                                with major benefits.</p>
                         </div>
                     </div>
 
@@ -379,6 +379,57 @@
             </div>
         </div>
     </section>
+
+
+    <!-- Unmatched section -->
+
+    <section class="unmatched">
+        <div class="firebelly">
+            <p>WHY FIREBELLY?</p>
+        </div>
+        <div class="firebelly">
+            <h1>Uncompromising & Unmatched</h1>
+        </div>
+        <div class="details-container">
+            <div class="detal-meta-data">
+                <h1>REAL, TRANSPARENT INGREDIENTS</h1>
+                <p>We don't use any flavorings – "natural" or artificial – which always come with unlisted
+                    preservatives.</p>
+            </div>
+            <div class="detal-meta-data">
+                <h1>PROVEN BENEFITS</h1>
+                <p>The best institutions on the planet have studied tea for decades. Tea is not a fad – it's the real
+                    deal.</p>
+            </div>
+            <div class="detal-meta-data">
+                <h1>ELEVATED EXPERIENCE</h1>
+                <p>Our modern tea accessories are designed to make your experience simple, beautiful, and mess-free.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- picture section -->
+    <div class="image-wrapper">
+        <div class="image-container">
+            <picture data-rid="e86a2a87-0435-4f4a-bd41-0aaf00740e8a" data-replo-repeated-index=".0.0" class="r-ps71g0">
+                <source
+                    srcset="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/homepage_callouts_mobile.jpg?v=1711381383&amp;width=820"
+                    media="(max-width: 640px)">
+                <source
+                    srcset="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/homepage_callouts_41837f70-011e-4bca-981c-4dc0df56aa81.jpg?v=1711459835&amp;width=1024"
+                    media="(min-width: 641px) and (max-width: 766px)">
+                <source
+                    srcset="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/homepage_callouts_tablet.jpg?v=1711400065&width=1024"
+                    media="(min-width: 767px) and (max-width: 1024px)">
+                <source
+                    srcset="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/homepage_callouts_41837f70-011e-4bca-981c-4dc0df56aa81.jpg?v=1711459835&amp;width=2048"
+                    media="(min-width: 1025px)">
+                <img src="https://cdn.shopify.com/s/files/1/0573/8502/5710/files/homepage_callouts_41837f70-011e-4bca-981c-4dc0df56aa81.jpg?v=1711459835"
+                    class="r-1he3x6k" loading="eager">
+            </picture>
+        </div>
+    </div>
+
 </body>
 <script src="index.js"></script>
 
