review section and popular section implemented.

--- a/index.html
+++ b/index.html
@@ -430,6 +430,41 @@
         </div>
     </div>
 
+
+    <!-- Review section  -->
+
+
+    <section class="slider">
+        <div class="slider-heading">
+            <h1>1,000+ 5-Star Reviews For A Reason</h1>
+        </div>
+        <div class="slider-container">
+            <div class="carousel-container">
+                <div class="carousel-prev">
+                </div>
+                <div class="carousel-item">
+                </div>
+                <div class="carousel-next">
+                </div>
+            </div>
+
+            <div class="carousel-btn">
+                <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
+                <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- popular section -->
+
+    <section class="popular">
+        <h1>Shop by Popular Benefits</h1>
+        <div class="popular-container">
+
+        </div>
+    </section>
+
 </body>
 <script src="index.js"></script>
 
