slider title implemented.

--- a/index.html
+++ b/index.html
@@ -465,6 +465,26 @@
         </div>
     </section>
 
+
+    <!-- slider title  -->
+
+    <section id="slider-title">
+        <div class="slider-item">
+            <div class="slider-text-div">
+                <i class="fas fa-quote-left"></i>
+                <span id="slider-text"></span>
+                <i class="fas fa-quote-right"></i>
+            </div>
+
+            <div class="slider-img-div">
+                <img id="slider-image" src="" alt="">
+            </div>
+            <!-- Add font-awesome icon for the opening quote -->
+
+        </div>
+    </section>
+
+
 </body>
 <script src="index.js"></script>
 
