image section implemented.

--- a/index.html
+++ b/index.html
@@ -485,6 +485,13 @@
     </section>
 
 
+
+    <!-- image section -->
+    <section class="imagesection">
+        <div id="imageSection">
+        </div>
+    </section>
+
 </body>
 <script src="index.js"></script>
 
