--- a/index.html
+++ b/index.html
@@ -478,9 +478,7 @@
 
             <div class="slider-img-div">
                 <img id="slider-image" src="" alt="">
-            </div>
-            <!-- Add font-awesome icon for the opening quote -->
-
+            </div> 
         </div>
     </section>
 
@@ -491,6 +489,49 @@
         <div id="imageSection">
         </div>
     </section>
+
+    <hr class="horizontal-line">
+
+
+    <footer>
+        <div class="main-footer">
+            <div class="footer-container">
+                <div class="footer-section">
+                    <h3>About</h3>
+                    <ul>
+                        <!-- About section items will be dynamically added here -->
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Follow</h3>
+                    <ul>
+                        <!-- Follow section items will be dynamically added here -->
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Info</h3>
+                    <ul>
+                        <!-- Info section items will be dynamically added here -->
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-email">
+                <h4>Don't Miss a Sip.</h4>
+                <p>We'll make it worth your while to keep in touch.</p>
+                 <div class="email-container">
+                    <input type="email" placeholder="Email">
+                    <button type="submit">Subscribe</button>
+                 </div>
+            </div>
+        </div>
+
+        <div class="footer-end" id="footer-end">
+            <p>©2024, Firebelly Tea</p>
+            <p>TERMS OF SERVICE</p>
+            <p>PRIVACY POLICY</p>
+        </div>
+    </footer>
 
 </body>
 <script src="index.js"></script>
