video section implemented.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <i class="fa-solid fa-star"></i> -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -478,7 +482,20 @@
 
             <div class="slider-img-div">
                 <img id="slider-image" src="" alt="">
-            </div> 
+            </div>
+        </div>
+    </section>
+
+    <!-- social section -->
+
+    <section class="video-section">
+        <div class="video-title">
+            <h3>Spilling the Tea On Social</h3>
+            <p>Follow @firebellytea</p>
+        </div>
+        <div class="video-carousel-container">
+            <div class="video-thumbnail-wrapper">
+            </div>
         </div>
     </section>
 
@@ -519,10 +536,10 @@
             <div class="footer-email">
                 <h4>Don't Miss a Sip.</h4>
                 <p>We'll make it worth your while to keep in touch.</p>
-                 <div class="email-container">
+                <div class="email-container">
                     <input type="email" placeholder="Email">
                     <button type="submit">Subscribe</button>
-                 </div>
+                </div>
             </div>
         </div>
 
